# xibridge

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  config.h.cmake  config_xi.h.cmake  get_src.bat  test.bat  xibridge.h
.github/workflows/: release.yml
client/: bindy_helper.cpp  bindy_helper.h  version.h.in  version.rc  version_config.rc.in  xibridge.cpp  xibridge.h  xibridge_client.cpp  xibridge_client.h
common/: Protocols.cpp  Protocols.h  defs.h  ext_dev_id.h  protocols.cpp  protocols.h  utils.cpp  utils.h  xibridge_uri_parse.h
example/: example.cpp  xiexample.cpp  xinet_server_test_1.cpp  xinet_server_test_2.cpp  xinet_server_urpc.cpp  xinet_server_xibridge.cpp  xinet_server_ximc.cpp
example/urmc-min/: urmc_min.h
example/ximc-min/: ximc_min.h
include/: xibridge.h
misc/: protocols.cpp  protocols.h
server/: CMakeLists.txt  common.cpp  common.hpp  devid2usb.cpp  devid2usb.h  mapdevidphnd.cpp  mapdevidphnd.h  mapserialurpc.cpp  mapserialurpc.h  platform-linux.cpp  platform-macos.cpp  platform-posix.cpp  platform-win32.cpp  platform.h  rw_lock.h  server.cpp  supervisor.cpp  supervisor.h.in  supervisor.hpp  xibridge_server.cpp  xibridge_server_lib.cpp  xibridge_server_lib.h
server/urpc-serial/: CMakeLists.txt  devserial.c  devserial.h  platform-win32.c  platform.h  synchronizer.c  synchronizer.h  uri.c  urpc.c  urpc.h
server/xib-serial/: CMakeLists.txt  devserial.c  devserial.h  platform-posix.c  platform.h  uri.c  uri.h  xib_com.c  xib_com.h
test/: test.cpp  test_main.cpp  test_proto.cpp  xinet_server_test_1.cpp  xinet_server_test_2.cpp  xitest.cpp
test/server_simu/: server_simu.cpp
test/urmc-min/: urmc_min.h
test/ximc-min/: ximc_min.h
xiexample/: xiexample.cpp  xinet_server_test_1.cpp  xinet_server_test_2.cpp
xiexample/urmc-min/: urmc_min.h
xiexample/ximc-min/: ximc_min.h
