CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(xib-serial C)

IF(WIN32)
    ADD_LIBRARY(xib-serial STATIC xib_com.c uri.c devserial.c)
ELSE()
    ADD_LIBRARY(xib-serial STATIC xib_com.c uri.c devserial.c)
ENDIF()

FUNCTION(ADD_SUBDIRECTORY_TINYCTHREAD)
    SET(BUILD_SHARED_LIBS OFF CACHE INTERNAL "")
    SET(TINYCTHREAD_DISABLE_TESTS ON CACHE INTERNAL "")
    SET(TINYCTHREAD_INSTALL OFF CACHE INTERNAL "")
    ADD_SUBDIRECTORY(vendor/tinycthread)
ENDFUNCTION()
ADD_SUBDIRECTORY_TINYCTHREAD()
target_include_directories(xib-serial PRIVATE vendor/tinycthread/source)
TARGET_LINK_LIBRARIES(xib-serial tinycthread)

GET_DIRECTORY_PROPERTY(HAS_PARENT PARENT_DIRECTORY)
if (NOT HAS_PARENT)
    FUNCTION(ADD_SUBDIRECTORY_ZF_LOG)
       SET(BUILD_SHARED_LIBS OFF CACHE INTERNAL "")
       ADD_SUBDIRECTORY(../vendor/zf_log/zf_log)
    ENDFUNCTION()
    ADD_SUBDIRECTORY_ZF_LOG()
endif()

INCLUDE_DIRECTORIES(../vendor/zf_log/zf_log)
TARGET_LINK_LIBRARIES(xib-serial zf_log)

if(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
   SET(LIBSPORT_NAME libserialport)
else()
   SET(LIBSPORT_NAME serialport) 
endif()

if (NOT DEFINED LIBSERIALPORT_PATH)
         if(${CMAKE_SYSTEM_NAME} STREQUAL Darwin)
            set (LIBSERIALPORT_PATH "${CMAKE_SOURCE_DIR}/../libserialport_release/macos" CACHE INTERNAL "")
         elseif(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
            if (CMAKE_SIZEOF_VOID_P EQUAL 8)
                # 64 bits
                set (LIBSERIALPORT_PATH "${CMAKE_SOURCE_DIR}/../libserialport_release/win64"  CACHE INTERNAL "")
            else()
                # 32 bits
                set (LIBSERIALPORT_PATH "${CMAKE_SOURCE_DIR}/../libserialport_release/win32" CACHE INTERNAL "")
            endif() 
         elseif (${CMAKE_SYSTEM_PROCESSOR} STREQUAL mips)
            set (LIBSERIALPORT_PATH "${CMAKE_SOURCE_DIR}/../libserialport_release/deb_mips" CACHE INTERNAL "")
         else()
            set (LIBSERIALPORT_PATH "${CMAKE_SOURCE_DIR}/../libserialport_release/deb64" CACHE INTERNAL "")
         endif()
     endif()
     find_path(LIBSERIALPORT_INCLUDE_DIR libserialport.h PATHS ${LIBSERIALPORT_PATH})
     find_library(LIBSERIALPORT_LIBRARY NAMES  ${LIBSPORT_NAME} PATHS  ${LIBSERIALPORT_PATH})
     include(FindPackageHandleStandardArgs)
     FIND_PACKAGE_HANDLE_STANDARD_ARGS(LIBSERIALPORT DEFAULT_MSG LIBSERIALPORT_INCLUDE_DIR LIBSERIALPORT_LIBRARY)
     mark_as_advanced(LIBSERIALPORT_INCLUDE_DIR LIBSERIALPORT_LIBRARY)
     if(NOT LIBSERIALPORT_FOUND)
         message(FATAL_ERROR "libserialport could not be found in LIBSERIALPORT_PATH")
     else ()
     include_directories(${LIBSERIALPORT_INCLUDE_DIR})
     target_link_libraries(xib-serial ${LIBSERIALPORT_LIBRARY})
endif()	

if(MSVC)
     target_compile_options(xib-serial PRIVATE /W3 /WX)
else()
     target_compile_options(xib-serial PRIVATE -Wall -Wextra -Werror)
endif()
